...
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintEnd_toEndOf="@id/topics"
        app:layout_constraintStart_toStartOf="@id/topics"
        app:layout_constraintTop_toBottomOf="@id/topics">

        <LinearLayout
            android:id="@+id/topicList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/ok_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
...
