<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout = "@layout/toolbar_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@+id/move_selection_to_solved_squares_text"
            android:text="@string/level"
            android:textSize="20sp"
            android:id = "@+id/level_text"/>
        <Spinner
            android:layout_marginTop="12dp"
            android:layout_below="@+id/level_text"
            android:layout_marginStart="-8dp"
            android:id = "@+id/level_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/move_selection_to_solved_squares_text"
            android:entries = "@array/levels"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/move_selection_to_solved_squares"
            android:text="@string/enable_sound"
            android:layout_alignStart="@id/move_selection_to_solved_squares_text"
            android:textSize="20sp"
            android:id = "@+id/sound_enable_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/level_list"
            android:text="@string/move_selection_to_solved_squares"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:id = "@+id/move_selection_to_solved_squares_text"/>
        <CheckBox
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="-6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/move_selection_to_solved_squares_text"
            android:layout_alignStart="@+id/move_selection_to_solved_squares_text"
            android:id = "@+id/move_selection_to_solved_squares"/>
        <CheckBox
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="-6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sound_enable_text"
            android:layout_alignStart="@+id/sound_enable_text"
            android:id = "@+id/sound_enable"/>
    </RelativeLayout>
</LinearLayout>