<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hintTopics">select topics</string>
    <string name="sizeName">size:</string>
    <string name="okButton">OK</string>
    <string name="solve_square">Solve square (-1\u2605)</string>
    <string name="solve_square_free">Solve square for free</string>
    <string name="solve_word">Solve word (-3\u2605)</string>
    <string name="solve_word_free">Solve word for free</string>
    <string name="free">FREE</string>
    <string name="menu_report_error">Report error</string>
    <string name="tip">%1$d. %2$s [%3$s]</string>
    <string name="youve_solved_the_puzzle">You\'ve solved the puzzle! (+5\u2605)</string>
    <string name="reset">RESET</string>
    <string name="another_crossword">ANOTHER CROSSWORD</string>
    <string name="leave_the_training">LEAVE THE TRAINING</string>
    <string name="train_the_same_topics">train the same topics</string>
    <string name="train_other_topics">train other topics</string>
    <string name="remove">REMOVE</string>
    <string name="choose_at_least_one_topic">Please, select at least one topic</string>
    <string name="not_enough_words">The selected topics doesn\'t consist of %1$d words</string>
    <string name="choose_other_words">Please, choose other words. I can\'t build crossword</string>
    <string name="delete_crossword_question">Do you want to delete %1$s?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name ="damaged_data">The crossword data is damaged</string>
    <string name ="number_of_stars">number of stars</string>
    <string name ="generate_crossword">generate crossword</string>
    <string name= "training">training</string>
    <string name ="level">your level</string>
    <string-array name="levels">
        <item>beginner(A1)</item>
        <item>elementary(A2)</item>
        <item>intermediate(B1)</item>
        <item>upper-intermediate(B2)</item>
        <item>advanced(C1)</item>
    </string-array>
    <string name ="settings">settings</string>
    <string name ="choose_level_dialog_text">Select your level, please. You can change it later
        in settings.</string>
    <string name ="move_selection_to_solved_squares">move selection to solved squares</string>
    <string name ="enable_sound">enable sound</string>
    <string name="error_reasons_string">Please, choose a type of problem</string>
    <string name="error_message">Please, describe a problem below</string>
    <string name="not_enough_stars_word">You don\'t have enough stars (%1s\u2605) to open a word (-3\u2605).
        Please, solve a crossword to earn stars (+5\u2605)</string>
    <string name="not_enough_stars_square">You don\'t have enough stars (%1s\u2605) to open a square (-1\u2605).
        Please, solve a crossword to earn stars (+5\u2605)</string>
    <string-array name="error_reasons">
        <item>translation meaning</item>
        <item>clue\'s spelling</item>
        <item>answer\'s spelling</item>
        <item>unsuitable topic</item>
    </string-array>
    <string name ="change_print_mode_to_move_to_solved">
        We noticed that you probably type into solved squares.
        Do you want to try another typing mode?</string>
    <string name="TTS_unavailable">TTS is unavailable</string>
</resources>
